# Cubicum

./: .gitignore  CMakeLists.txt  LISCENSE.txt  README.md
assets/shaders/: fragment_shader.glsl  vertex_shader.glsl
include/glad/: glad.c  glad.h
src/core/: main.cpp  path_manager.cpp  path_manager.h  shader.cpp  shader.h
src/render/: camera.cpp  camera.h  chunk.cpp  chunk.h  perlinNoise.cpp  perlinNoise.h  texture.h  world.cpp  world.h
